--- a/k8s/db-secrets.yaml
+++ b/k8s/db-secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: db-secrets
+  name: my-app-db-secrets
   labels:
     component: db
   namespace: default
