--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     component: api
-  name: api
+  name: my-app-api
   namespace: default
 spec:
   replicas: 1
@@ -22,22 +22,22 @@ spec:
           - name: DB_HOST_NAME
             valueFrom:
               configMapKeyRef:
-                name: db-configmap
+                name: my-app-db-configmap
                 key: db_host
           - name: DB_NAME
             valueFrom:
               configMapKeyRef:
-                name: db-configmap
+                name: my-app-db-configmap
                 key: db_name
           - name: DB_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: db-secrets
+                name: my-app-db-secrets
                 key: password
           - name: DB_USER
             valueFrom:
               secretKeyRef:
-                name: db-secrets
+                name: my-app-db-secrets
                 key: username
 
           image: ghcr.io/noleu/event_calendar_api
@@ -63,7 +63,7 @@ status: {}
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-cluster-ip-service
+  name: my-app-api-cluster-ip-service
   namespace: default
 spec:
   selector:
