--- a/k8s/app-developer-role.yaml
+++ b/k8s/app-developer-role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: app-developer-role
+  name: my-app-app-developer-role
   namespace: default
 rules:
   - apiGroups: ["","/","extensions", "apps"]
@@ -13,11 +13,11 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: app-developer-binding
+  name: my-app-app-developer-binding
 roleRef:
     apiGroup: rbac.authorization.k8s.io
     kind: Role
-    name: app-developer-role
+    name: my-app-app-developer-role
 subjects:
 - kind: ServiceAccount
   name: app-developer
