--- a/k8s/frontend-configmap.yaml
+++ b/k8s/frontend-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: frontend-configmap
+  name: my-app-frontend-configmap
   namespace: default
 data:
   api_url: "api-cluster-ip-service"
