--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-service
+  name: my-app-ingress-service
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: managed-cert
@@ -15,10 +15,10 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: frontend-cluster-ip-service
+            name: my-app-frontend-cluster-ip-service
             port: 
               number: 80
   tls:
   - hosts:
     - myeventsapp.com
-    secretName: myingress-cert
+    secretName: my-app-myingress-cert
