--- a/k8s/managed-cert.yaml
+++ b/k8s/managed-cert.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
-  name: managed-cert
+  name: my-app-managed-cert
 spec:
   domains:
     - myeventsapp.com
