--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -40,7 +40,7 @@ spec:
                 name: my-app-db-secrets
                 key: username
 
-          image: ghcr.io/noleu/event_calendar_api
+          image: ghcr.io/noleu/event_calendar_api:latest
           name: api
           ports:
             - containerPort: 8080
