fix frontend pod connection to api pod

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,9 @@
+worker_processes  4;
+
+events {
+    worker_connections  1024;
+}
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -12,6 +18,10 @@ http {
         # Handle Single Page App (SPA) routing - redirect all requests to index.html
         location / {
             try_files $uri $uri/ /index.html;
+        }
+
+        location /api {
+            proxy_pass http://api-cluster-ip-service;
         }
 
         # Optionally, configure logging
