--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       context: ./api
       dockerfile: Dockerfile
     ports:
-      - '8080:8080'
+      - '80:8080'
     depends_on:
       - database
     security_opt:
@@ -25,7 +25,7 @@ services:
     cap_add:
       - SYS_PTRACE
     environment:
-      DB_HOST: database
+      DB_HOST_NAME: database
       DB_USER: postgres
       DB_PASSWORD: postgres
       DB_NAME: Events
@@ -41,9 +41,6 @@ services:
     container_name: event-frontend
     ports:
       - '5173:5173'
-    environment:
-      VITE_API_URL: http://localhost:8080/api
-      NODE_ENV: development
     volumes:
       - ./frontend:/app
       - /app/node_modules
