--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -34,6 +34,7 @@ RUN apk --no-cache add wget
 
 # Copy static assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 # Expose port 80
 EXPOSE 80
