--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -15,19 +15,7 @@ spec:
     spec:
       containers:
         - name: event-frontend
-          image: ghcr.io/noleu/event_calendar_frontend
-          env:
-            - name: NODE_ENV
-              valueFrom:
-                configMapKeyRef:
-                  name: frontend-configmap
-                  key: node_env
-            - name: VITE_API_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: frontend-configmap
-                  key: api_url
-
+          image: ghcr.io/noleu/event_calendar_frontend:latest
           ports:
             - containerPort: 80
           resources: 
