--- a/helmcharts/templates/api-deployment.yaml
+++ b/helmcharts/templates/api-deployment.yaml
@@ -42,14 +42,14 @@ spec:
               name: {{ include "helmcharts.fullname" . }}-db-secrets
         - name: KUBERNETES_CLUSTER_DOMAIN
           value: {{ quote .Values.kubernetesClusterDomain }}
-        image: {{ .Values.api.api.image.repository }}:{{ .Values.api.api.image.tag | default
+        image: {{ .Values.api.image.repository }}:{{ .Values.api.image.tag | default
           .Chart.AppVersion }}
         name: api
         ports:
-        - containerPort: 80
+        - containerPort: {{ .Values.api.containerPort }}
           protocol: TCP
-        resources: {{- toYaml .Values.api.api.resources | nindent 10 }}
-        securityContext: {{- toYaml .Values.api.api.containerSecurityContext | nindent
+        resources: {{- toYaml .Values.api.resources | nindent 10 }}
+        securityContext: {{- toYaml .Values.api.containerSecurityContext | nindent
           10 }}
       restartPolicy: Always
 ---
