--- a/helmcharts/values.yaml
+++ b/helmcharts/values.yaml
@@ -38,8 +38,8 @@ dbConfigmap:
   dbHost: database-cluster-ip-service
   dbName: Events
 dbSecrets:
-  password: ""
-  username: ""
+  password: "cG9zdGdyZXM="
+  username: "cG9zdGdyZXM="
 frontend:
   image:
     repository: ghcr.io/noleu/event_calendar_frontend
