--- a/helmcharts/templates/frontend-deployment.yaml
+++ b/helmcharts/templates/frontend-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "helmcharts.fullname" . }}-frontend
   labels:
-  {{- include "helmcharts.labels" . | nindent 4 }}
+    {{- include "helmcharts.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.frontend.replicas }}
   selector:
@@ -17,14 +17,14 @@ spec:
       {{- include "helmcharts.selectorLabels" . | nindent 8 }}
     spec:
       containers:
+      - env:
         - name: KUBERNETES_CLUSTER_DOMAIN
           value: {{ quote .Values.kubernetesClusterDomain }}
-        image: {{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag | default .Chart.AppVersion }}
         name: my-app-event-frontend
+        image: {{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag | default .Chart.AppVersion }}
         ports:
-        - containerPort: {{ .Values.frontend.containerPort }}
-        resources: {{- toYaml .Values.frontend.resources | nindent 10
-          }}
+          - containerPort: {{ .Values.frontend.containerPort }}
+        resources: {{- toYaml .Values.frontend.resources | nindent 10 }}
       restartPolicy: Always
 ---
 apiVersion: v1
@@ -32,11 +32,11 @@ kind: Service
 metadata:
   name: {{ include "helmcharts.fullname" . }}-frontend-cluster-ip-service
   labels:
-  {{- include "helmcharts.labels" . | nindent 4 }}
+    {{- include "helmcharts.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.frontendClusterIpService.type }}
   selector:
     app: frontend
   {{- include "helmcharts.selectorLabels" . | nindent 4 }}
   ports:
-	{{- .Values.frontendClusterIpService.ports | toYaml | nindent 2 -}}
+    {{- .Values.frontendClusterIpService.ports | toYaml | nindent 2 -}}
