--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,7 +21,7 @@ http {
         }
 
         location /api {
-            proxy_pass http://api-cluster-ip-service;
+            proxy_pass http://${API_URL};
         }
 
         # Optionally, configure logging
