--- a/helmcharts/templates/db-configmap.yaml
+++ b/helmcharts/templates/db-configmap.yaml
@@ -5,5 +5,5 @@ metadata:
   labels:
   {{- include "helmcharts.labels" . | nindent 4 }}
 data:
-  db_host: {{ .Values.dbConfigmap.dbHost | quote }}
+  db_host: {{ include "helmcharts.fullname" . }}-{{ .Values.dbConfigmap.dbHost | quote }}
   db_name: {{ .Values.dbConfigmap.dbName | quote }}
