--- a/helmcharts/templates/frontend-hpa.yaml
+++ b/helmcharts/templates/frontend-hpa.yaml
@@ -6,7 +6,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: frontend
+    name: {{ include "helmcharts.fullname" . }}-frontend
   minReplicas: {{ .Values.frontendHpa.minReplicas }}
   maxReplicas: {{ .Values.frontendHpa.maxReplicas }}
   metrics:
