--- a/k8s/api-hpa.yaml
+++ b/k8s/api-hpa.yaml
@@ -7,7 +7,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: api
+    name: my-app-api
   minReplicas: 1
   maxReplicas: 6
   metrics:
