--- a/k8s/frontend-hpa.yaml
+++ b/k8s/frontend-hpa.yaml
@@ -7,7 +7,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: frontend
+    name: my-app-frontend
   minReplicas: 1
   maxReplicas: 3
   metrics:
