change tag to v1

--- a/helmcharts/values.yaml
+++ b/helmcharts/values.yaml
@@ -43,7 +43,7 @@ dbSecrets:
 frontend:
   image:
     repository: ghcr.io/noleu/event_calendar_frontend
-    tag: rollout
+    tag: v1
   # resources:
   #   limits:
   #     cpu: 500m
