--- a/helmcharts/templates/selfsigned-issuer.yaml
+++ b/helmcharts/templates/selfsigned-issuer.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: selfsigned-issuer
+  name: {{ include "helmcharts.fullname" . }}-selfsigned-issuer
   namespace: default
 spec:
   selfSigned: {}
